# wasi_mcp

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs  monitored_stream.rs  state.rs
server/: Cargo.toml
server/src/: llm.rs  main.rs  wasi_io.rs
