[package]
name = "client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
bytes = "1.10"
wasmtime = "31.0"
wasmtime-wasi = "31.0"
rmcp = { git = "https://github.com/4t145/rmcp", branch = "master", features = [
    "client",
    "transport-io",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
tracing = { version = "0.1", features = [] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tracing-test = "0.2"
