[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
tracing = { version = "0.1", features = [] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
    "json",
] }
rmcp = { version = "0.1.5", features = ["server"] }
wasi = { version = "0.14.2" }

[dev-dependencies]
tracing-test = "0.2"
